--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-200 flex container items-center mx-auto justify-center">
-  <div class="bg-white p-6 rounded shadow-md">
+  <div class="bg-white w-full p-6 rounded shadow-md">
     <h2 class="text-2xl mb-4">2D Distance Calculator</h2>
     <p class="mb-4">輸入三個點的座標 a (x1,y1)、b (x2,y2)、c (x3,y3)，計算 ab 的距離，並算出 c 點距離 ab 線段的距離。</p>
     <div class="mb-4">
@@ -28,12 +28,12 @@
       </div>
     </div>
     <div class="mb-4">
-      <button id="btn" onclick="calculateAndDraw()" class="w-full p-2 bg-blue-500 text-white rounded">Calculate</button>
+      <button id="btn" onclick="calculateAndDraw()" class="w-full p-2 bg-blue-500 text-white rounded">計算</button>
     </div>
     <div class="mt-4">
       <p id="answer" class="text-red-500"></p>
     </div>
-    <div class="mt-4">
+    <div class="mt-4 overflow-auto">
       <canvas id="canvas" width="500" height="500"></canvas>
     </div>
     <div class="mt-4">
